apps/istio-ingress/overlays/ops/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingressgateway
  namespace: istio-system
  labels:
    app_label: istio-ingressgateway
    app.kubernetes.io/version: 1.17.0-beta.1
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*.diegoluisi.eti.br'
    - '*.analect.io'
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - port:
      name: https-diegoluisi
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: diegoluisi.eti.br # This should match the Certificate secretName
    hosts:
    - '*.diegoluisi.eti.br' # This should match a DNS name in the Certificate
  - port:
      name: https-devxp
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: analect.io # This should match the Certificate secretName
    hosts:
    - '*.analect.io' # This should match a DNS name in the Certificate
